# chat_box_v2

./: .dockerignore  DOCKER_GUIDE.md  README.md  docker-compose.mysql-only.yml  docker-compose.yml
backend/client/: README.md
backend/server/: BUILD_MYSQL.md  CMakeLists.txt  DEPENDENCIES.md  Dockerfile  PUBSUB_USAGE.md  README.md
backend/server/database/: schema.sql
backend/server/include/auth/: auth_manager.h
backend/server/include/database/: mysql_client.h
backend/server/include/handlers/: webrtc_handler.h
backend/server/include/websocket/: utils.h  websocket_server.h
backend/server/migrations/: 003_add_edit_delete_columns.sql  004_add_rooms_tables.sql  005_add_polls_tables.sql  012_add_display_name.sql  README.md
backend/server/src/: main.cpp
backend/server/src/ai/: gemini_client.cpp
backend/server/src/auth/: auth_manager.cpp  jwt_handler.cpp
backend/server/src/config/: config_loader.cpp
backend/server/src/database/: mysql_client.cpp
backend/server/src/handlers/: file_handler.cpp  webrtc_handler.cpp
backend/server/src/storage/: file_storage.cpp
backend/server/src/websocket/: websocket_server.cpp
config/: .env.example  README.md
docs/: 01-QUICK_START.md  02-FEATURES.md  03-DEPLOYMENT.md  04-DATABASE.md  05-PROTOCOL.md  06-TESTING.md  FIXES_COMPLETED.md  README.md
frontend/: CODE_ORGANIZATION.md  Dockerfile  README.md  test-modal.html
frontend/src/: App.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useFileUpload.ts  useWebSocket.ts
frontend/src/services/: protocol.ts  websocket.ts
frontend/src/stores/: callStore.ts
frontend/src/types/: chat.types.ts
scripts/: README.md
test/: README.md  auto-test.js  debug-chat-test.mjs  debug-room-test.mjs  full-feature-test.mjs  quick-test.mjs  test-new-features.js
(+15 files in other folders)
